@@ -1,6 +1,7 @@
 snaplogger (1.0.37.0~bionic) bionic; urgency=high
 
   * Added the boot_id system variable.
+  * Added a few missing guards in the appender.
 
  -- Alexis Wilke <alexis@m2osw.com>  Sun, 11 Jul 2021 20:46:55 -0700
 
